src/mock-data/data-big/samples/04-egress-isolated-ns/04-egress-isolated-ns-01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-egress-isolated-ns
  labels:
    name: test-egress-isolated-ns
