src/mock-data/data-big/samples/04-egress-isolated-ns/04-egress-isolated-ns-02-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: test-egress-isolated-ns
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
