src/mock-data/data-big/samples/04-egress-isolated-ns/04-egress-isolated-ns-03-deny-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: test-egress-isolated-ns
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
